y.output
Terminaux inutilisés dans la grammaire

    tWHILE


Grammaire

    0 $accept: Program $end

    1 Program: Functions

    2 Functions: Function Functions
    3          | Main

    4 Function: Type tID tPOUV Params tPFERM Body

    5 Main: Type tMAIN tPOUV tPFERM Body

    6 $@1: %empty

    7 Body: tAOUV $@1 Decls Insts tAFER

    8 Type: tINT

    9 Params: Param
   10       | Param tVIRG Params

   11 Param: Type tID

   12 Decls: Decl Decls
   13      | %empty

   14 Decl: Type Ids tSEMCOL
   15     | tCONST Type tID tEQ tNB tSEMCOL

   16 Ids: tID
   17    | tID tVIRG Ids

   18 Insts: Inst Insts
   19      | %empty

   20 Inst: Affect
   21     | tPRINT tPOUV tSTR tPFERM tSEMCOL
   22     | tIF tPOUV Condition tPFERM Body

   23 Condition: Elem tEQ tEQ Elem
   24          | Elem tEXCL tEQ Elem
   25          | Elem

   26 Elem: tID
   27     | tINT

   28 $@2: %empty

   29 Affect: tID $@2 tEQ Operations tSEMCOL

   30 Operations: tNB

   31 $@3: %empty

   32 $@4: %empty

   33 Operations: tNB $@3 Op $@4 Operations

   34 $@5: %empty

   35 $@6: %empty

   36 Operations: tID $@5 Op $@6 Operations
   37           | tID

   38 Op: tPLUS
   39   | tMOINS
   40   | tDIV
   41   | tMUL


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tEXCL (258) 24
    tIF (259) 22
    tWHILE (260)
    tMAIN (261) 5
    tAOUV (262) 7
    tAFER (263) 7
    tCONST (264) 15
    tPLUS (265) 38
    tMOINS (266) 39
    tMUL (267) 41
    tDIV (268) 40
    tEQ (269) 15 23 24 29
    tPOUV (270) 4 5 21 22
    tPFERM (271) 4 5 21 22
    tVIRG (272) 10 17
    tSEMCOL (273) 14 15 21 29
    tPRINT (274) 21
    tNB <nb> (275) 15 30 33
    tSTR <str> (276) 21
    tINT <str> (277) 8 27
    tID <id> (278) 4 11 15 16 17 26 29 36 37


Non-terminaux, suivis des règles où ils apparaissent

    $accept (24)
        à gauche: 0
    Program (25)
        à gauche: 1
        à droite: 0
    Functions (26)
        à gauche: 2 3
        à droite: 1 2
    Function (27)
        à gauche: 4
        à droite: 2
    Main (28)
        à gauche: 5
        à droite: 3
    Body (29)
        à gauche: 7
        à droite: 4 5 22
    $@1 (30)
        à gauche: 6
        à droite: 7
    Type <type> (31)
        à gauche: 8
        à droite: 4 5 11 14 15
    Params (32)
        à gauche: 9 10
        à droite: 4 10
    Param (33)
        à gauche: 11
        à droite: 9 10
    Decls (34)
        à gauche: 12 13
        à droite: 7 12
    Decl (35)
        à gauche: 14 15
        à droite: 12
    Ids (36)
        à gauche: 16 17
        à droite: 14 17
    Insts (37)
        à gauche: 18 19
        à droite: 7 18
    Inst (38)
        à gauche: 20 21 22
        à droite: 18
    Condition (39)
        à gauche: 23 24 25
        à droite: 22
    Elem (40)
        à gauche: 26 27
        à droite: 23 24 25
    Affect (41)
        à gauche: 29
        à droite: 20
    $@2 (42)
        à gauche: 28
        à droite: 29
    Operations (43)
        à gauche: 30 33 36 37
        à droite: 29 33 36
    $@3 (44)
        à gauche: 31
        à droite: 33
    $@4 (45)
        à gauche: 32
        à droite: 33
    $@5 (46)
        à gauche: 34
        à droite: 36
    $@6 (47)
        à gauche: 35
        à droite: 36
    Op <type> (48)
        à gauche: 38 39 40 41
        à droite: 33 36


État 0

    0 $accept: . Program $end

    tINT  décalage et aller à l'état 1

    Program    aller à l'état 2
    Functions  aller à l'état 3
    Function   aller à l'état 4
    Main       aller à l'état 5
    Type       aller à l'état 6


État 1

    8 Type: tINT .

    $défaut  réduction par utilisation de la règle 8 (Type)


État 2

    0 $accept: Program . $end

    $end  décalage et aller à l'état 7


État 3

    1 Program: Functions .

    $défaut  réduction par utilisation de la règle 1 (Program)


État 4

    2 Functions: Function . Functions

    tINT  décalage et aller à l'état 1

    Functions  aller à l'état 8
    Function   aller à l'état 4
    Main       aller à l'état 5
    Type       aller à l'état 6


État 5

    3 Functions: Main .

    $défaut  réduction par utilisation de la règle 3 (Functions)


État 6

    4 Function: Type . tID tPOUV Params tPFERM Body
    5 Main: Type . tMAIN tPOUV tPFERM Body

    tMAIN  décalage et aller à l'état 9
    tID    décalage et aller à l'état 10


État 7

    0 $accept: Program $end .

    $défaut  accepter


État 8

    2 Functions: Function Functions .

    $défaut  réduction par utilisation de la règle 2 (Functions)


État 9

    5 Main: Type tMAIN . tPOUV tPFERM Body

    tPOUV  décalage et aller à l'état 11


État 10

    4 Function: Type tID . tPOUV Params tPFERM Body

    tPOUV  décalage et aller à l'état 12


État 11

    5 Main: Type tMAIN tPOUV . tPFERM Body

    tPFERM  décalage et aller à l'état 13


État 12

    4 Function: Type tID tPOUV . Params tPFERM Body

    tINT  décalage et aller à l'état 1

    Type    aller à l'état 14
    Params  aller à l'état 15
    Param   aller à l'état 16


État 13

    5 Main: Type tMAIN tPOUV tPFERM . Body

    tAOUV  décalage et aller à l'état 17

    Body  aller à l'état 18


État 14

   11 Param: Type . tID

    tID  décalage et aller à l'état 19


État 15

    4 Function: Type tID tPOUV Params . tPFERM Body

    tPFERM  décalage et aller à l'état 20


État 16

    9 Params: Param .
   10       | Param . tVIRG Params

    tVIRG  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 9 (Params)


État 17

    7 Body: tAOUV . $@1 Decls Insts tAFER

    $défaut  réduction par utilisation de la règle 6 ($@1)

    $@1  aller à l'état 22


État 18

    5 Main: Type tMAIN tPOUV tPFERM Body .

    $défaut  réduction par utilisation de la règle 5 (Main)


État 19

   11 Param: Type tID .

    $défaut  réduction par utilisation de la règle 11 (Param)


État 20

    4 Function: Type tID tPOUV Params tPFERM . Body

    tAOUV  décalage et aller à l'état 17

    Body  aller à l'état 23


État 21

   10 Params: Param tVIRG . Params

    tINT  décalage et aller à l'état 1

    Type    aller à l'état 14
    Params  aller à l'état 24
    Param   aller à l'état 16


État 22

    7 Body: tAOUV $@1 . Decls Insts tAFER

    tCONST  décalage et aller à l'état 25
    tINT    décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 13 (Decls)

    Type   aller à l'état 26
    Decls  aller à l'état 27
    Decl   aller à l'état 28


État 23

    4 Function: Type tID tPOUV Params tPFERM Body .

    $défaut  réduction par utilisation de la règle 4 (Function)


État 24

   10 Params: Param tVIRG Params .

    $défaut  réduction par utilisation de la règle 10 (Params)


État 25

   15 Decl: tCONST . Type tID tEQ tNB tSEMCOL

    tINT  décalage et aller à l'état 1

    Type  aller à l'état 29


État 26

   14 Decl: Type . Ids tSEMCOL

    tID  décalage et aller à l'état 30

    Ids  aller à l'état 31


État 27

    7 Body: tAOUV $@1 Decls . Insts tAFER

    tIF     décalage et aller à l'état 32
    tPRINT  décalage et aller à l'état 33
    tID     décalage et aller à l'état 34

    $défaut  réduction par utilisation de la règle 19 (Insts)

    Insts   aller à l'état 35
    Inst    aller à l'état 36
    Affect  aller à l'état 37


État 28

   12 Decls: Decl . Decls

    tCONST  décalage et aller à l'état 25
    tINT    décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 13 (Decls)

    Type   aller à l'état 26
    Decls  aller à l'état 38
    Decl   aller à l'état 28


État 29

   15 Decl: tCONST Type . tID tEQ tNB tSEMCOL

    tID  décalage et aller à l'état 39


État 30

   16 Ids: tID .
   17    | tID . tVIRG Ids

    tVIRG  décalage et aller à l'état 40

    $défaut  réduction par utilisation de la règle 16 (Ids)


État 31

   14 Decl: Type Ids . tSEMCOL

    tSEMCOL  décalage et aller à l'état 41


État 32

   22 Inst: tIF . tPOUV Condition tPFERM Body

    tPOUV  décalage et aller à l'état 42


État 33

   21 Inst: tPRINT . tPOUV tSTR tPFERM tSEMCOL

    tPOUV  décalage et aller à l'état 43


État 34

   29 Affect: tID . $@2 tEQ Operations tSEMCOL

    $défaut  réduction par utilisation de la règle 28 ($@2)

    $@2  aller à l'état 44


État 35

    7 Body: tAOUV $@1 Decls Insts . tAFER

    tAFER  décalage et aller à l'état 45


État 36

   18 Insts: Inst . Insts

    tIF     décalage et aller à l'état 32
    tPRINT  décalage et aller à l'état 33
    tID     décalage et aller à l'état 34

    $défaut  réduction par utilisation de la règle 19 (Insts)

    Insts   aller à l'état 46
    Inst    aller à l'état 36
    Affect  aller à l'état 37


État 37

   20 Inst: Affect .

    $défaut  réduction par utilisation de la règle 20 (Inst)


État 38

   12 Decls: Decl Decls .

    $défaut  réduction par utilisation de la règle 12 (Decls)


État 39

   15 Decl: tCONST Type tID . tEQ tNB tSEMCOL

    tEQ  décalage et aller à l'état 47


État 40

   17 Ids: tID tVIRG . Ids

    tID  décalage et aller à l'état 30

    Ids  aller à l'état 48


État 41

   14 Decl: Type Ids tSEMCOL .

    $défaut  réduction par utilisation de la règle 14 (Decl)


État 42

   22 Inst: tIF tPOUV . Condition tPFERM Body

    tINT  décalage et aller à l'état 49
    tID   décalage et aller à l'état 50

    Condition  aller à l'état 51
    Elem       aller à l'état 52


État 43

   21 Inst: tPRINT tPOUV . tSTR tPFERM tSEMCOL

    tSTR  décalage et aller à l'état 53


État 44

   29 Affect: tID $@2 . tEQ Operations tSEMCOL

    tEQ  décalage et aller à l'état 54


État 45

    7 Body: tAOUV $@1 Decls Insts tAFER .

    $défaut  réduction par utilisation de la règle 7 (Body)


État 46

   18 Insts: Inst Insts .

    $défaut  réduction par utilisation de la règle 18 (Insts)


État 47

   15 Decl: tCONST Type tID tEQ . tNB tSEMCOL

    tNB  décalage et aller à l'état 55


État 48

   17 Ids: tID tVIRG Ids .

    $défaut  réduction par utilisation de la règle 17 (Ids)


État 49

   27 Elem: tINT .

    $défaut  réduction par utilisation de la règle 27 (Elem)


État 50

   26 Elem: tID .

    $défaut  réduction par utilisation de la règle 26 (Elem)


État 51

   22 Inst: tIF tPOUV Condition . tPFERM Body

    tPFERM  décalage et aller à l'état 56


État 52

   23 Condition: Elem . tEQ tEQ Elem
   24          | Elem . tEXCL tEQ Elem
   25          | Elem .

    tEXCL  décalage et aller à l'état 57
    tEQ    décalage et aller à l'état 58

    $défaut  réduction par utilisation de la règle 25 (Condition)


État 53

   21 Inst: tPRINT tPOUV tSTR . tPFERM tSEMCOL

    tPFERM  décalage et aller à l'état 59


État 54

   29 Affect: tID $@2 tEQ . Operations tSEMCOL

    tNB  décalage et aller à l'état 60
    tID  décalage et aller à l'état 61

    Operations  aller à l'état 62


État 55

   15 Decl: tCONST Type tID tEQ tNB . tSEMCOL

    tSEMCOL  décalage et aller à l'état 63


État 56

   22 Inst: tIF tPOUV Condition tPFERM . Body

    tAOUV  décalage et aller à l'état 17

    Body  aller à l'état 64


État 57

   24 Condition: Elem tEXCL . tEQ Elem

    tEQ  décalage et aller à l'état 65


État 58

   23 Condition: Elem tEQ . tEQ Elem

    tEQ  décalage et aller à l'état 66


État 59

   21 Inst: tPRINT tPOUV tSTR tPFERM . tSEMCOL

    tSEMCOL  décalage et aller à l'état 67


État 60

   30 Operations: tNB .
   33           | tNB . $@3 Op $@4 Operations

    tSEMCOL   réduction par utilisation de la règle 30 (Operations)
    $défaut  réduction par utilisation de la règle 31 ($@3)

    $@3  aller à l'état 68


État 61

   36 Operations: tID . $@5 Op $@6 Operations
   37           | tID .

    tSEMCOL   réduction par utilisation de la règle 37 (Operations)
    $défaut  réduction par utilisation de la règle 34 ($@5)

    $@5  aller à l'état 69


État 62

   29 Affect: tID $@2 tEQ Operations . tSEMCOL

    tSEMCOL  décalage et aller à l'état 70


État 63

   15 Decl: tCONST Type tID tEQ tNB tSEMCOL .

    $défaut  réduction par utilisation de la règle 15 (Decl)


État 64

   22 Inst: tIF tPOUV Condition tPFERM Body .

    $défaut  réduction par utilisation de la règle 22 (Inst)


État 65

   24 Condition: Elem tEXCL tEQ . Elem

    tINT  décalage et aller à l'état 49
    tID   décalage et aller à l'état 50

    Elem  aller à l'état 71


État 66

   23 Condition: Elem tEQ tEQ . Elem

    tINT  décalage et aller à l'état 49
    tID   décalage et aller à l'état 50

    Elem  aller à l'état 72


État 67

   21 Inst: tPRINT tPOUV tSTR tPFERM tSEMCOL .

    $défaut  réduction par utilisation de la règle 21 (Inst)


État 68

   33 Operations: tNB $@3 . Op $@4 Operations

    tPLUS   décalage et aller à l'état 73
    tMOINS  décalage et aller à l'état 74
    tMUL    décalage et aller à l'état 75
    tDIV    décalage et aller à l'état 76

    Op  aller à l'état 77


État 69

   36 Operations: tID $@5 . Op $@6 Operations

    tPLUS   décalage et aller à l'état 73
    tMOINS  décalage et aller à l'état 74
    tMUL    décalage et aller à l'état 75
    tDIV    décalage et aller à l'état 76

    Op  aller à l'état 78


État 70

   29 Affect: tID $@2 tEQ Operations tSEMCOL .

    $défaut  réduction par utilisation de la règle 29 (Affect)


État 71

   24 Condition: Elem tEXCL tEQ Elem .

    $défaut  réduction par utilisation de la règle 24 (Condition)


État 72

   23 Condition: Elem tEQ tEQ Elem .

    $défaut  réduction par utilisation de la règle 23 (Condition)


État 73

   38 Op: tPLUS .

    $défaut  réduction par utilisation de la règle 38 (Op)


État 74

   39 Op: tMOINS .

    $défaut  réduction par utilisation de la règle 39 (Op)


État 75

   41 Op: tMUL .

    $défaut  réduction par utilisation de la règle 41 (Op)


État 76

   40 Op: tDIV .

    $défaut  réduction par utilisation de la règle 40 (Op)


État 77

   33 Operations: tNB $@3 Op . $@4 Operations

    $défaut  réduction par utilisation de la règle 32 ($@4)

    $@4  aller à l'état 79


État 78

   36 Operations: tID $@5 Op . $@6 Operations

    $défaut  réduction par utilisation de la règle 35 ($@6)

    $@6  aller à l'état 80


État 79

   33 Operations: tNB $@3 Op $@4 . Operations

    tNB  décalage et aller à l'état 60
    tID  décalage et aller à l'état 61

    Operations  aller à l'état 81


État 80

   36 Operations: tID $@5 Op $@6 . Operations

    tNB  décalage et aller à l'état 60
    tID  décalage et aller à l'état 61

    Operations  aller à l'état 82


État 81

   33 Operations: tNB $@3 Op $@4 Operations .

    $défaut  réduction par utilisation de la règle 33 (Operations)


État 82

   36 Operations: tID $@5 Op $@6 Operations .

    $défaut  réduction par utilisation de la règle 36 (Operations)
